bk_ida/bzip2ida/c1/prepare_new_block
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:641:12: error: expected expression
*( _OWORD *)s->inUse = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:641:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)s->inUse = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:642:12: error: expected expression
*( _OWORD *)&s->inUse[16] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:642:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[16] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:643:12: error: expected expression
*( _OWORD *)&s->inUse[32] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:643:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[32] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:644:12: error: expected expression
*( _OWORD *)&s->inUse[48] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:644:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[48] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:645:12: error: expected expression
*( _OWORD *)&s->inUse[64] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:645:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[64] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:646:12: error: expected expression
*( _OWORD *)&s->inUse[80] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:646:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[80] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:647:12: error: expected expression
*( _OWORD *)&s->inUse[96] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:647:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[96] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:648:12: error: expected expression
*( _OWORD *)&s->inUse[112] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:648:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[112] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:649:12: error: expected expression
*( _OWORD *)&s->inUse[128] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:649:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[128] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:650:12: error: expected expression
*( _OWORD *)&s->inUse[144] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:650:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[144] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:651:12: error: expected expression
*( _OWORD *)&s->inUse[160] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:651:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[160] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:652:12: error: expected expression
*( _OWORD *)&s->inUse[176] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:652:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[176] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:653:12: error: expected expression
*( _OWORD *)&s->inUse[192] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:653:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[192] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:654:12: error: expected expression
*( _OWORD *)&s->inUse[208] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:654:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[208] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:655:12: error: expected expression
*( _OWORD *)&s->inUse[224] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:655:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[224] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:656:12: error: expected expression
*( _OWORD *)&s->inUse[240] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/bzlib.c:656:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[240] = 0LL; 
   ^
32 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/prepare_new_block/src/obj/bzlib.o] Error 1
